# commandcenter

./: .gitignore  CLAUDE.md  README.md  dev  lefthook.yml  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  XVE-PARITY.md
src-tauri/: Cargo.toml  Info.plist  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/cc-mcp/: Cargo.toml
src-tauri/crates/cc-mcp/src/: events.rs  lib.rs  main.rs  serve.rs  server.rs  transport.rs  webtransport.rs  ws.rs
src-tauri/crates/cc-mcp/src/tools/: feedback.rs  locks.rs  mod.rs  odometer.rs  processes.rs  projects.rs  prompt_templates.rs  scratchpads.rs  session.rs  timers.rs  todos.rs
src-tauri/crates/cc-mcp/tests/: event_bus_transports.rs
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  engine.rs  lib.rs  main.rs  single_instance.rs  store.rs  verify.rs
ui/: astro.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/public/cms/resources/: 3d-image-carousel.avif  basic-gsap-slider.avif  global-parallax-setup.avif  image-preview-cursor.avif  momentum-based-hover.avif  osmo-scaling-system.avif  stacked-cards-slider.avif
ui/public/cms/showcase/: axiom.avif  gethyped.avif  gh.avif  lumenartspace.avif  parisbyemily.avif  sui.avif  sunnybonnell.avif  supersolid.avif  truus.avif  ui8.avif
ui/public/cms/testimonials/: byhuy.avif  dang-nguyen.avif  victor-work.avif
ui/public/css/: main.css
ui/public/images/about/: modal-01.avif  modal-02.avif  modal-03.avif
ui/public/images/cards/pricing/: pricing-card-course-500.avif  pricing-card-course.avif  pricing-card-student-500.avif  pricing-card-student-800.avif  pricing-card-student.avif
ui/public/images/cards/product/: product-card-community.avif  product-card-easings.avif  product-card-icons.avif  product-card-page-transitions.avif  product-card-vault.avif
ui/public/images/cards/updates/: update-card-100.avif  update-card-awwwards.avif  update-card-bookmark.avif  update-card-challenge.avif  update-card-flowfest.avif  update-card-icons.avif  update-card-launch.avif  update-card-members.avif  update-card-rebrand.avif  update-card-search.avif  update-card-svg-import.avif  update-card-valencia.avif  update-card-webflow-conf.avif
ui/public/images/community/: globe-africa-accent.avif  globe-africa-base.avif  globe-asia-oceania-accent.avif  globe-asia-oceania-base.avif  globe-europe-accent.avif  globe-europe-base.avif  globe-north-america-accent.avif  globe-north-america-base.avif  globe-south-america-accent.avif  globe-south-america-base.avif  slack-pill.avif
ui/public/images/decor/: navigation-banner.avif
ui/public/images/icons/collections/: flags.avif  (+3 more)
ui/public/images/people/: andres-sentis.avif  bianca-sosa.avif  carter-ogunsola.avif  chelsea-tan.avif  daniel-pacheco.avif  dennis-cutout.avif  felixaner-yuan.avif  female-dev-subject.avif  geoff-dawes.avif  ilja-cutout.avif  joseph-graham.avif  joshua-windatt.avif  justin-kairuz.avif  malik-gwandu.avif  melissa-mendez.avif  pf-dennis.avif  pf-ilja.avif  renata-aquino.avif  tomas-mrazek.avif
ui/public/images/placeholders/: noise.avif
ui/public/images/product/: osmo-icons-placeholder.avif  osmo-icons-webcam.avif  osmo-micrographic-1.avif  osmo-micrographic-2.avif  osmo-micrographic-3.avif
ui/public/images/screens/: dash-screen-code-500.avif  dash-screen-code-800.avif  dash-screen-code.avif  dash-screen-webflow-500.avif  dash-screen-webflow-800.avif  dash-screen-webflow.avif  dashboard-resource-1080.avif  dashboard-resource-500.avif  dashboard-resource-800.avif  dashboard-resource.avif  documentation-type-1080.avif  documentation-type-500.avif  documentation-type-800.avif  documentation-type.avif  live-preview-1080.avif  live-preview-500.avif  live-preview-800.avif  live-preview.avif  onboarding-9.avif  saved-view-1080.avif  saved-view-500.avif  saved-view-800.avif  saved-view.avif  search-blue-1080.avif  search-blue-500.avif  search-blue-800.avif  search-blue.avif  stacking-cards-1440x900.avif  video-tutorial-1080.avif  video-tutorial-500.avif  video-tutorial-800.avif  video-tutorial.avif
ui/public/images/vault/: demo-vault-dark.avif  demo-vault-light.avif  osmo-vault-placeholder.avif  osmo-vault-webcam.avif
ui/public/js/: main.js
ui/src/: env.d.ts  main.ts  style.css
ui/src/components/: NumberOdometer.astro
ui/src/components/chrome/: AppSidebar.astro  EventBusInit.astro  GridOverlay.astro  OffsidePanel.astro  ProgressiveBlur.astro  SearchModal.astro  SiteFooter.astro  SiteNav.astro  ThemeInit.astro  TitleBar.astro
ui/src/components/docs/: ArticleToc.astro  DocsNav.astro  DocsPager.astro
ui/src/components/pages/: CommunityPage.astro  CookiePolicyPage.astro  FaqPage.astro  HomeHero.astro  HomePage.astro  IconsPage.astro  LicensingPage.astro  NotFoundPage.astro  PlansPage.astro  PrivacyPolicyPage.astro  ShowcasePage.astro  TermsPage.astro  UpdatesPage.astro  VaultPage.astro
ui/src/data/: docsNav.ts
ui/src/layouts/: AppShellLayout.astro  BaseLayout.astro  BlankLayout.astro  DocsLayout.astro
ui/src/markup/: community-main.html  cookie-policy-main.html  faq-main.html  footer.html  home-hero.html  home-main.html  home-undernav.html  icons-main.html  licensing-main.html  nav.html  not-found-main.html  plans-main.html  privacy-policy-main.html  showcase-main.html  terms-and-conditions-main.html  updates-main.html  vault-main.html
ui/src/pages/: 404.astro  app.astro  faq.astro  index.astro  plans.astro  secrets.astro  showcase.astro  updates.astro
ui/src/pages/docs/: agents.astro  app-shell.astro  credentials.astro  index.astro  mcp-server.astro  processes.astro  projects.astro  theming.astro
ui/src/pages/legal/: cookie-policy.astro  licensing.astro  privacy-policy.astro  terms-and-conditions.astro
ui/src/pages/product/: community.astro  icons.astro  vault.astro
ui/src/scripts/: nav.ts  pixel-transition.ts
ui/src/scripts/lib/: gsap-setup.ts  lenis-state.ts
ui/src/stores/: eventBus.ts
ui/tests/e2e/: sidebar-interactivity.spec.ts
(+5 files in other folders)
