[package]
name = "cc-mcp"
description = "MCP server stubs for CommandCenter's Solo-compatible tool surface"
version = "0.0.1"
edition = "2024"
publish = false
[[bin]]
name = "cc-mcp"
path = "src/main.rs"
[dependencies]
rmcp = { version = "1.5", features = [
  "transport-io",
  "transport-streamable-http-server",
  "server",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
  "sync",
  "net",
] }
axum = "0.7"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rmcp = { version = "1.5", features = ["client"] }
