[package]
name = "cc-mcp"
description = "MCP server stubs for CommandCenter's Solo-compatible tool surface"
version = "0.0.1"
edition = "2024"
publish = false
[[bin]]
name = "cc-mcp"
path = "src/main.rs"
[dependencies]
rmcp = { version = "1.5", features = [
  "transport-io",
  "transport-streamable-http-server",
  "server",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
  "sync",
  "net",
  "time",
] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# WebTransport PoC: HTTP/3-over-QUIC server, TLS required even on localhost.
wtransport = "0.6"

[dev-dependencies]
rmcp = { version = "1.5", features = ["client"] }
tokio-tungstenite = "0.24"
# "dangerous-configuration" unlocks with_no_cert_validation for the test
# client only -- the self-signed server cert has no CA a real client could
# validate against, and pinning its hash is out of scope for this PoC test.
wtransport = { version = "0.6", features = ["dangerous-configuration"] }
